CHANGELOG

[Master]
- build chord
- add dictionaries