@@ -12,6 +12,23 @@ function normalize (i, ndx, array) { return op.subtract(array[0], i) }
 function octavize (i) { return i[2] === null ? [i[0], i[1], 0] : i }
 function semitones (i) { return i[0] + i[1] + 12 * i[2] }
 function comparator (a, b) { return semitones(a) - semitones(b) }
+function toArray (src) {
+  if (Array.isArray(src)) return src
+  else if (typeof src === 'string') return src.split(/\s+/)
+  else return null
+}
+function intervals (src) {
+  var arr = toArray(src)
+  if (!arr || !arr.length) return arr
+
+  return arr.map(parse).map(octavize).map(normalize).sort(comparator)
+}
+function mapValues (fn, hash) {
+  return Object.keys(hash).reduce(function (ret, key) {
+    ret[key] = fn(hash[key])
+    return ret
+  }, {})
+}
 
 /**
  * Build a chord from a source and a tonic
@@ -32,15 +49,27 @@ function comparator (a, b) { return semitones(a) - semitones(b) }
  * maj79('A4') // => ['A4', 'C#5', 'E5', 'G#5', 'B5']
  */
 function chord (src, tonic) {
-  var array
-  if (isArray(src)) array = src
-  else if (typeof src === 'string') array = src.split(/\s+/)
-  else return null
-  if (array.length === 0) return []
+  var ivls = intervals(src)
+  return ivls ? ivls.map(transpose(tonic)) : null
+}
 
-  return array.map(parse).map(octavize).map(normalize).sort(comparator).map(transpose(tonic))
+/**
+ * Create a chord dictionary
+ *
+ * @param {Hash} chordNames - a hash that maps names to intervals (or notes)
+ * @param {Hash} aliases - (Optional) a hash that maps names to names or null
+ * @return {Function} a function `chord(name, tonic)`
+ */
+function dictionary (dict, aliases) {
+  var idict = mapValues(intervals, dict)
+  aliases = aliases || []
+  return function (name, tonic) {
+    var intervals = idict[name] || idict[aliases[name]]
+    return intervals ? chord(intervals, tonic) : null
+  }
 }
 
 var lib = curry(chord)
+lib.dictionary = dictionary
 
 module.exports = lib
