@@ -1,5 +1,6 @@
 CHANGELOG
 
 [Master]
+- dictionary function
 - build chord
 - add dictionaries
